{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 50,
  "lineage": "6406e12a-f4af-c6a7-82a1-d0e87001bc3e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017f4c3b1d37eb32d",
            "arn": "arn:aws:ec2:eu-west-2:929423420164:elastic-ip/eipalloc-017f4c3b1d37eb32d",
            "association_id": "eipassoc-0af6909240a2d32ac",
            "domain": "vpc",
            "id": "eipalloc-017f4c3b1d37eb32d",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0d26c6d1fdbf9b59d",
            "private_dns": "ip-10-10-2-37.eu-west-2.compute.internal",
            "private_ip": "10.10.2.37",
            "public_dns": "ec2-18-168-253-63.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.168.253.63",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "scalpel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:internet-gateway/igw-006cc3bc73e1e7a11",
            "id": "igw-006cc3bc73e1e7a11",
            "owner_id": "929423420164",
            "tags": {
              "Name": "scalpel-igw"
            },
            "tags_all": {
              "Name": "scalpel-igw"
            },
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "dependencies": [
            "aws_vpc.scalpel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "scalpel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-017f4c3b1d37eb32d",
            "association_id": "eipassoc-0af6909240a2d32ac",
            "connectivity_type": "public",
            "id": "nat-0e10f42b1bedd9494",
            "network_interface_id": "eni-0d26c6d1fdbf9b59d",
            "private_ip": "10.10.2.37",
            "public_ip": "18.168.253.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04c4655a1d88d1d76",
            "tags": {
              "Name": "scalpel-natgw"
            },
            "tags_all": {
              "Name": "scalpel-natgw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:route-table/rtb-0c0f64ba2b12342f3",
            "id": "rtb-0c0f64ba2b12342f3",
            "owner_id": "929423420164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e10f42b1bedd9494",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "scalpel-private-rt"
            },
            "tags_all": {
              "Name": "scalpel-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.scalpel",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:route-table/rtb-03f6132be28790878",
            "id": "rtb-03f6132be28790878",
            "owner_id": "929423420164",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006cc3bc73e1e7a11",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "scalpel-public-rt"
            },
            "tags_all": {
              "Name": "scalpel-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.scalpel",
            "aws_vpc.scalpel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096f3641c20f42a45",
            "route_table_id": "rtb-0c0f64ba2b12342f3",
            "subnet_id": "subnet-04b124bf93e40fb19"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.scalpel",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b066c0f7c449e247",
            "route_table_id": "rtb-0c0f64ba2b12342f3",
            "subnet_id": "subnet-0b08b70ea77411d59"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.scalpel",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00c634c5bff5c0ac4",
            "route_table_id": "rtb-03f6132be28790878",
            "subnet_id": "subnet-04c4655a1d88d1d76"
          },
          "dependencies": [
            "aws_internet_gateway.scalpel",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09e81a6408d4f9413",
            "route_table_id": "rtb-03f6132be28790878",
            "subnet_id": "subnet-08d33d53a5e96df25"
          },
          "dependencies": [
            "aws_internet_gateway.scalpel",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "aurora",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:security-group/sg-0aa114326a284ebb7",
            "description": "Allow Lambda to connect to Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aa114326a284ebb7",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0478fed0416b0eab6"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "scalpel-aurora-sg",
            "name_prefix": "",
            "owner_id": "929423420164",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lambda",
            "aws_vpc.scalpel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:security-group/sg-0478fed0416b0eab6",
            "description": "Security group for Lambda to access Aurora",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0478fed0416b0eab6",
            "ingress": [],
            "name": "scalpel-lambda-sg",
            "name_prefix": "",
            "owner_id": "929423420164",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.scalpel"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:subnet/subnet-04b124bf93e40fb19",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b124bf93e40fb19",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929423420164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalpel-private-0",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "scalpel-private-0",
              "Tier": "private"
            },
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "dependencies": [
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:subnet/subnet-0b08b70ea77411d59",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b08b70ea77411d59",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "929423420164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalpel-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "scalpel-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "dependencies": [
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:subnet/subnet-04c4655a1d88d1d76",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04c4655a1d88d1d76",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "929423420164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalpel-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "scalpel-public-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "dependencies": [
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:subnet/subnet-08d33d53a5e96df25",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d33d53a5e96df25",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "929423420164",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "scalpel-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "scalpel-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-01431e49e408411ca"
          },
          "dependencies": [
            "aws_vpc.scalpel",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "scalpel",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:929423420164:vpc/vpc-01431e49e408411ca",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0e8d32520e0bb1f0d",
            "default_route_table_id": "rtb-0e35f9aa7184523a5",
            "default_security_group_id": "sg-035b730dc59dd3a86",
            "dhcp_options_id": "dopt-06f6b9995fc32b0b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01431e49e408411ca",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e35f9aa7184523a5",
            "owner_id": "929423420164",
            "tags": {
              "Name": "scalpel_vpc"
            },
            "tags_all": {
              "Name": "scalpel_vpc"
            }
          }
        }
      ]
    }
  ]
}